# tomu-rust-example

./: README.md
efm32hg309/: Cargo.toml
fw/: Cargo.toml  memory.x
fw/.cargo/: config
fw/src/: main.rs
